# New_Mceliece

./: .gitignore  ALGORITHM_ANALYSIS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  Classic McEliece Algorithm Explained in Detail.md  FINAL_ASSESSMENT.md  FUNCTION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  UNUSED_FUNCTIONS_ANALYSIS.md  core  gf.h  h -u origin main  main.c  makefile  matrix.h  mceliece  mceliece.h  mceliece_berlekamp.c  mceliece_decode.h  mceliece_gf.c  mceliece_kem.c  mceliece_matrix_ops.c  mceliece_random.c  mceliece_random.h  mceliece_shake.c  mceliece_test.c  mceliece_test.h  mceliece_types.h  mceliece_utils.c  test_gauss.c  vector.h
debug_chien.dSYM/Contents/: Info.plist
debug_chien.dSYM/Contents/Resources/DWARF/: debug_chien
debug_decode.dSYM/Contents/: Info.plist
debug_decode.dSYM/Contents/Resources/DWARF/: debug_decode
